SYDDK-492 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
@@ -39,6 +39,21 @@ img {
     }
 }
 
+.label {
+    padding: 4px 16px;
+
+    border-radius: 12px;
+}
+
+.label-default {
+
+    &,
+    &:hover,
+    &:focus {
+        color: $text-color;
+    }
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
