--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
@@ -20,7 +20,29 @@
 // Styling
 // --------------------------------------------------
 
-.panels-layout--content-with-left-and-right-sidebar-top-footer {}
+.panels-layout--content-with-left-and-right-sidebar-top-footer {
+
+  .pane-node-terms {
+
+    // Tags
+    .links {
+      list-style: none;
+      padding: 0;
+
+      li {
+        display: inline-block;
+
+        margin-right: 10px;
+        padding-bottom: 10px;
+
+        a {
+          @extend .label;
+          @extend .label-default;
+        }
+      }
+    }
+  }
+}
 
 // --------------------------------------------------
 // Variants
