SYDDK-492 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
@@ -42,6 +42,13 @@
       }
     }
   }
+
+  .pane-node-field-os2web-kulturnaut-slidesho {
+
+    img {
+      width: 100%;
+    }
+  }
 }
 
 // --------------------------------------------------
