--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
@@ -27,6 +27,8 @@
     .panels-pane-region--sidebar-right {
       @extend .boxy__body;
 
+      padding-top: $boxy-spacing-left-right;
+
       border: 0;
 
       font-size: $font-size-large;
@@ -48,7 +50,38 @@
       }
 
       .panel-separator {
-        height: 15px;
+        height: 20px;
+      }
+
+      .pane-node-field-os2web-kulturnaut-slidesho {
+        margin-bottom: $grid-gutter-width;
+
+        img {
+          width: 100%;
+
+          border-radius: $border-radius-base;
+        }
+      }
+
+      .pane-node-terms {
+
+        // Tags
+        .links {
+          list-style: none;
+          padding: 0;
+
+          li {
+            display: inline-block;
+
+            margin-right: 10px;
+            padding-bottom: 10px;
+
+            a {
+              @extend .label;
+              @extend .label-default;
+            }
+          }
+        }
       }
     }
   }
