--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_kultunaut-event.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_kultunaut-event.scss
@@ -25,16 +25,19 @@ $entity-teaser-date-margin-top: 35px;
 .entity-teaser--os2web-kulturnaut-knactivity {
   position: relative;
 
-  display: flex;
-
-  flex-grow: 1;
-  flex-direction: column;
-
   margin-top: $entity-teaser-date-margin-top;
 
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  .entity-teaser__inner {
+    background-image: radial-gradient(
+                    circle at top right,
+                    rgba(255, 255, 255, .35) 0%,
+                    transparent 40%
+    );
+  }
 
   .entity-teaser__date {
     position: absolute;
@@ -92,6 +95,14 @@ $entity-teaser-date-margin-top: 35px;
 
   &:hover {
 
+    .entity-teaser__inner {
+      background-image: radial-gradient(
+                      circle at top right,
+                      rgba(0, 0, 0, .35) 0%,
+                      transparent 40%
+      );
+    }
+
     .entity-teaser__date {
       top: $entity-teaser-body-padding-top-bottom;
 
@@ -108,6 +119,13 @@ $entity-teaser-date-margin-top: 35px;
 
     .entity-teaser__body {
       background-color: transparent;
+      background-image: linear-gradient(
+                      rgba(0, 0, 0, 0),
+                      rgba(0, 0, 0, .1),
+                      rgba(0, 0, 0, .22),
+                      rgba(0, 0, 0, .35),
+                      rgba(0, 0, 0, .4)
+      );
     }
 
     .entity-teaser__top-level-venue {
