SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
@@ -4,6 +4,7 @@
 
 @import "flexy-header";
 @import "flexy-navigation";
+@import "layout";
 @import "sidr";
 @import "slinky-menu";
 @import "footer";
