--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
@@ -792,7 +792,7 @@ $badge-border-radius:         10px !default;
 //
 //##
 
-$breadcrumb-padding-vertical:   8px !default;
+$breadcrumb-padding-vertical:   15px;
 $breadcrumb-padding-horizontal: 0;
 //** Breadcrumb background color
 $breadcrumb-bg:                 transparent;
