SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_layout.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_layout.scss
@@ -11,10 +11,10 @@
 // --------------------------------------------------
 
 // Responsive
-$xs-layout-content-padding-bottom: 40px;
-$sm-layout-content-padding-bottom: 60px;
-$md-layout-content-padding-bottom: 70px;
-$lg-layout-content-padding-bottom: 80px;
+$xs-layout-content-padding-bottom: $xs-sectioned-inner-spacing;
+$sm-layout-content-padding-bottom: $sm-sectioned-inner-spacing;
+$md-layout-content-padding-bottom: $md-sectioned-inner-spacing;
+$lg-layout-content-padding-bottom: $lg-sectioned-inner-spacing;
 
 // --------------------------------------------------
 // Mixins
