--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
@@ -54,7 +54,7 @@
       }
 
       .panel-separator {
-        height: 20px;
+        height: $panel-separator-height;
       }
 
       .pane-node-field-os2web-kulturnaut-slidesho {
