--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_places.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_places.scss
@@ -51,7 +51,7 @@
         background-color: $boxy-shadow-body-background-color;
 
         .panel-separator {
-          height: 20px;
+          height: $panel-separator-height;
         }
       }
     }
