--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_loader.scss
@@ -1,6 +1,8 @@
 @import "components/loader";
 @import "entity/loader";
 @import "field/loader";
+@import "panels-layout/loader";
+@import "pane/loader";
 @import "page/loader";
 
 @import "overrides";
