SYDDK-491 - panels layout
Spacing between description and teasers view in variant 4

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_breadcrumb.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_breadcrumb.scss
@@ -27,6 +27,7 @@ $lg-breadcrumb-padding-vertical: 45px;
 // --------------------------------------------------
 
 .breadcrumb {
+  margin: 0;
   padding: $xs-breadcrumb-padding-vertical $breadcrumb-padding-horizontal;
 
   > li {
