--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_content-with-left-and-right-sidebar-top-footer.scss
@@ -32,6 +32,15 @@ $panel-separator-height: 25px;
       margin: 0 0 $panel-separator-height 0;
     }
   }
+
+  .panels-pane-region {
+    margin-bottom: $grid-gutter-width;
+
+    // Banner
+    &.panels-pane-region--top {
+      margin-bottom: 0;
+    }
+  }
 }
 
 // --------------------------------------------------
