SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
@@ -24,6 +24,10 @@
 
   &.panels-layout--content-with-left-and-right-sidebar-top-footer {
 
+    .panels-pane-region--content-first {
+      margin-bottom: 0;
+    }
+
     .panels-pane-region--content-secondary {
       @extend .boxy__body;
     }
