--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_places.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_places.scss
@@ -36,6 +36,10 @@
 
     &.panels-display--variant-2 {
 
+      .panels-pane-region--content-first {
+        margin-bottom: 0;
+      }
+
       .panels-pane-region--content-secondary {
         @extend .boxy__body;
       }
