--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-light-dark-light-dark.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-light-dark-light-dark.scss
@@ -1,16 +1,14 @@
 // |--------------------------------------------------------------------------
-// | Content with left and right sidebar with top and footer
+// | Sectioned top light/dark/light/dark
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .panels-layout--content-with-left-and-right-sidebar-top-footer
+// | - .panels-layout--sectioned-top-light-dark-light-dark
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
-
-$panel-separator-height: 25px;
 
 // --------------------------------------------------
 // Mixins
@@ -22,30 +20,13 @@ $panel-separator-height: 25px;
 // Styling
 // --------------------------------------------------
 
-.panels-layout--content-with-left-and-right-sidebar-top-footer {
-
-  .pane-views-panes {
-
-    .pane-title {
-      @extend .heading-h3;
-
-      margin: 0 0 $panel-separator-height 0;
-    }
-  }
-
-  .panels-pane-region {
-    margin-bottom: $grid-gutter-width;
-
-    // Banner
-    &.panels-pane-region--top {
-      margin-bottom: 0;
-    }
-  }
-}
+.panels-layout--sectioned-top-light-dark-light-dark {}
 
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
+
+.panels-layout--sectioned-top-light-dark-light-dark {}
 
 // --------------------------------------------------
 // Responsive
