SYDDK-500 - banner on terms
Overlay

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_carousel.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_carousel.scss
@@ -10,6 +10,8 @@
 // Variables
 // --------------------------------------------------
 
+$carousel-overlay-color: #1b3e46;
+
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
@@ -76,6 +78,8 @@
   }
 }
 
+
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -87,11 +91,33 @@
     width: 100%;
   }
 
+  .carousel-overlay {
+    position: absolute;
+
+    z-index: 250;
+
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    content: "";
+
+    background-color: transparent;
+    background-image: linear-gradient(
+                    to right,
+                    rgba(27, 62, 70, .6) 40%,
+                    transparent 65%
+    );
+  }
+
   .carousel-caption {
     top: 20px;
-    padding-top: 30px;
-
     bottom: auto;
+
+    z-index: 500;
+
+    padding-top: 30px;
 
     text-align: left;
 
