SYDDK-491 - panels layout
Add a map marker icon to map button

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/field/_map-link.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/field/_map-link.scss
@@ -27,6 +27,14 @@
     @extend .btn-primary;
     @extend .btn-block;
     @extend .btn-lg;
+
+    &:before {
+      @extend .icon;
+
+      content: $fa-var-map-marker;
+
+      margin-right: 6px;
+    }
   }
 }
 
