--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
@@ -14,13 +14,48 @@
 // Mixins
 // --------------------------------------------------
 
-@mixin views-exposed-form-mixin() {}
+@mixin views-exposed-form-checkbox-variant-mixin($checked-color) {
+
+  &.is-checked {
+    border-color: $checked-color;
+
+    input[type="checkbox"].form-control {
+      border-color: $checked-color;
+      background-color: $checked-color;
+    }
+  }
+}
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 .views-exposed-form {
+
+  .views-exposed-widgets {
+    display: flex;
+
+    flex-direction: column;
+
+    margin: 0;
+  }
+
+  .views-exposed-widget {
+    display: inline-block;
+
+    // Resets
+    float: none;
+
+    margin: 10px 0 0 0;
+    padding: 0;
+
+    .btn {
+      margin: 0;
+      margin-top: 3px;
+
+      padding: 10px $padding-base-horizontal;
+    }
+  }
 
   .views-widget {
     display: inline-block;
@@ -30,17 +65,142 @@
     }
   }
 
-  .views-widget-filter-date_filter {
+  .btn {
 
-    .form-group {
-      max-width: 170px;
+    &.btn-default,
+    &.btn-info {
+      @extend .btn-primary;
+    }
+  }
+
+  // The wrapper around all the checkboxes
+  .form-control.form-checkboxes {
+    height: auto;
+    width: auto;
+
+    border-radius: 0;
+
+    padding: 0;
+
+    font-weight: $font-weight-bold;
+    font-size: $font-size-large;
+    color: $text-color-dark;
+
+    background-color: transparent;
+
+    &, &:hover, &:focus {
+      border-color: transparent;
+    }
+  }
+
+  .bef-checkboxes {
+    display: flex;
+
+    flex-wrap: wrap;
+
+    .form-type-bef-checkbox {
+      display: flex;
+
+      flex-direction: row-reverse;
+      align-items: center;
+
+      margin: 2px 10px 0 2px;
+      padding: 7px 12px;
+
+      border-radius: $border-radius-base;
+      border: 2px solid #d8d8d8;
+
+      transition: border-color $transition-time-short ease-in-out;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
     label {
       display: block;
 
+      cursor: hand;
+      cursor: pointer;
+
+      padding: 0;
+      margin: 0 8px 0 0;
+
+      font-weight: $font-weight-bold;
+      font-size: $font-size-large;
+      color: $text-color-dark;
+
+      white-space: nowrap;
+    }
+
+    // Resets
+    input[type="checkbox"].form-control {
+      display: inline-block;
+
+      width: auto;
+      height: auto;
+
+      padding: 0;
       margin: 0;
-      margin-bottom: 4px;
+
+      font-size: medium;
+
+      border: medium none;
+      border-radius: 0;
+
+      background-color: transparent;
+    }
+
+    input[type="checkbox"].form-control {
+      display: flex;
+
+      align-items: center;
+      justify-content: center;
+
+      width: 28px;
+      height: 28px;
+
+      transition: all $transition-time-short ease-in-out;
+
+      border-radius: $border-radius-base;
+      border: 2px solid #d8d8d8;
+
+      &:after {
+        display: none;
+
+        @extend .icon;
+        content: $fa-var-check;
+
+        color: $text-color;
+
+        transition: all $transition-time-short ease-in-out;
+      }
+
+      &:checked {
+
+        &:after {
+          display: block;
+
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  .views-widget-filter-date_filter {
+
+    .views-widget {
+      display: flex;
+    }
+
+    .form-group {
+      max-width: 140px;
+    }
+
+    label {
+      display: block;
+
+      margin: 0 0 4px 0;
 
       font-family: $font-family-base;
       font-size: $font-size-small;
@@ -65,19 +225,41 @@
       }
     }
   }
-
-  .btn {
-
-    &.btn-default,
-    &.btn-info {
-      @extend .btn-primary;
-    }
-  }
 }
 
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
+
+.views-exposed-form {
+
+  .bef-checkboxes {
+
+    .form-type-bef-checkbox {
+      @include views-exposed-form-checkbox-variant-mixin($brand-primary);
+
+      // For boern
+      &.form-item-edit-kat-98 {
+        @include views-exposed-form-checkbox-variant-mixin($oplev-syddjurs-top-level-for-boern);
+      }
+
+      // Kunst og kultur
+      &.form-item-edit-kat-83 {
+        @include views-exposed-form-checkbox-variant-mixin($oplev-syddjurs-top-level-kunst-og-kultur);
+      }
+
+      // Natur og friluftsliv
+      &.form-item-edit-kat-116 {
+        @include views-exposed-form-checkbox-variant-mixin($oplev-syddjurs-top-level-natur-og-friluftsliv);
+      }
+
+      // Sport og fritid
+      &.form-item-edit-kat-104 {
+        @include views-exposed-form-checkbox-variant-mixin($oplev-syddjurs-top-level-sport-og-fritid);
+      }
+    }
+  }
+}
 
 // --------------------------------------------------
 // Responsive
@@ -87,7 +269,8 @@
 @media #{$breakpoint-mobile-and-up} {}
 
 // Mobile - only
-@media #{$breakpoint-mobile-only} {}
+@media #{$breakpoint-mobile-only} {
+}
 
 // Tablet - and up
 @media #{$breakpoint-tablet-and-up} {}
@@ -96,7 +279,22 @@
 @media #{$breakpoint-tablet-only} {}
 
 // Desktop - and up
-@media #{$breakpoint-desktop-and-up} {}
+@media #{$breakpoint-desktop-and-up} {
+
+  .views-exposed-form {
+
+    .views-exposed-widgets {
+      flex-direction: row;
+    }
+
+    .views-exposed-widget {
+
+      + .views-exposed-widget {
+        margin-left: 10px;
+      }
+    }
+  }
+}
 
 // Desktop - only
 @media #{$breakpoint-desktop-only} {}
