SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_place.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_place.scss
@@ -115,6 +115,16 @@ $entity-teaser-place-body-padding-left-right: floor( ( $grid-gutter-width / 2 ) 
   }
 }
 
+.sectioned--dark {
+
+  .entity-teaser--os2web-taxonomies-tax-places {
+
+    .entity-teaser__body {
+      background-color: #fff;
+    }
+  }
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
