SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-light-dark-light-dark.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-light-dark-light-dark.scss
@@ -20,7 +20,12 @@
 // Styling
 // --------------------------------------------------
 
-.panels-layout--sectioned-top-light-dark-light-dark {}
+.panels-layout--sectioned-top-light-dark-light-dark {
+
+  .layout__content {
+    padding-bottom: 0;
+  }
+}
 
 // --------------------------------------------------
 // Variants
