--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-dark-light-dark-light.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/panels-layout/_sectioned-top-dark-light-dark-light.scss
@@ -27,6 +27,10 @@
 
     margin: 0 0 5px 0;
   }
+
+  .layout__content {
+    padding-bottom: 0;
+  }
 }
 
 // --------------------------------------------------
