--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_search-results.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_search-results.scss
@@ -1,61 +1,44 @@
 // |--------------------------------------------------------------------------
-// | List advanced
+// | Search results
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .entity-list-advanced
+// | - .search-results
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
+// Responsive
+$xs-search-result-item-spacing: floor( ( $grid-gutter-width / 2 ) );
+$sm-search-result-item-spacing: floor( ( $grid-gutter-width / 2 ) );
+$md-search-result-item-spacing: $grid-gutter-width;
+$lg-search-result-item-spacing: $grid-gutter-width;
+
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-@mixin entity-list-advanced-mixin() {}
+@mixin search-results-mixin() {}
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-.entity-list-advanced {
-  display: flex;
-}
-
-.entity-list-advanced__image {
-
-  img {
-    width: 100%;
-  }
-}
-
-.entity-list-advanced__heading {
-
-  + .entity-list-advanced__search-snippet,
-  + .entity-list-advanced__path {
-    margin-top: 10px;
-  }
-}
-.entity-list-advanced__heading__title {
-  @extend .heading-h3;
-
-  margin: 0;
+.search-results {
   padding: 0;
+  list-style: none;
 }
 
-.entity-list-advanced__body {
-  font-size: $font-size-large;
+.search-result {
+  padding: $xs-search-result-item-spacing 0;
+  border-bottom: 1px solid $border-color;
+
+  &:last-child {
+    border-bottom: 0;
+  }
 }
-
-.entity-list-advanced__search-snippet {}
-
-.entity-list-advanced__path {
-  font-size: $font-size-small;
-  color: $text-color-light;
-}
-
 
 // --------------------------------------------------
 // Variants
@@ -69,38 +52,13 @@
 @media #{$breakpoint-mobile-and-up} {}
 
 // Mobile - only
-@media #{$breakpoint-mobile-only} {
-
-  .entity-list-advanced {
-    flex-direction: column;
-  }
-
-  .entity-list-advanced__image {
-
-    + .entity-list-advanced__body {
-      margin-top: floor( ( $grid-gutter-width / 2 ) );
-    }
-  }
-}
+@media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
 @media #{$breakpoint-tablet-and-up} {
 
-  .entity-list-advanced {
-    align-items: center;
-  }
-
-  .entity-list-advanced__image {
-    flex-shrink: 0;
-    flex-basis: 220px;
-
-    + .entity-list-advanced__body {
-      margin-left: floor( ( $grid-gutter-width / 2 ) );
-    }
-  }
-
-  .entity-list-advanced__body {
-    flex-grow: 1;
+  .search-result {
+    padding: $sm-search-result-item-spacing 0;
   }
 }
 
@@ -108,13 +66,23 @@
 @media #{$breakpoint-tablet-only} {}
 
 // Desktop - and up
-@media #{$breakpoint-desktop-and-up} {}
+@media #{$breakpoint-desktop-and-up} {
+
+  .search-result {
+    padding: $md-search-result-item-spacing 0;
+  }
+}
 
 // Desktop - only
 @media #{$breakpoint-desktop-only} {}
 
 // Large desktop - and up
-@media #{$breakpoint-large-desktop-and-up} {}
+@media #{$breakpoint-large-desktop-and-up} {
+
+  .search-result {
+    padding: $lg-search-result-item-spacing 0;
+  }
+}
 
 // Print
 @media print {}
