--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_search-results.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_search-results.scss
@@ -26,18 +26,33 @@ $lg-search-result-item-spacing: $grid-gutter-width;
 // Styling
 // --------------------------------------------------
 
-.search-results {
-  padding: 0;
-  list-style: none;
+.search-results {}
+
+.search-results__form {
+
+  .form-inline {
+
+    .control-label {
+      display: none;
+    }
+  }
 }
 
-.search-result {
-  padding: $xs-search-result-item-spacing 0;
-  border-bottom: 1px solid $border-color;
+.search-results__list {}
+
+.search-results__list__item {
 
   &:last-child {
-    border-bottom: 0;
+
+    .entity-list-advanced--search-result {
+      border-bottom: 0;
+    }
   }
+}
+
+.entity-list-advanced--search-result {
+  padding: $xs-search-result-item-spacing 0;
+  border-bottom: 1px solid $border-color;
 }
 
 // --------------------------------------------------
